# OrchardEngine

./: README.md
OrchardEngine/: validate_project.sh
OrchardEngine/OrchardEngine/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  LICENSE  README.md  replit.md
OrchardEngine/OrchardEngine/Documentation/API/: GettingStarted.md
OrchardEngine/OrchardEngine/Documentation/Architecture/: EngineArchitecture.md
OrchardEngine/OrchardEngine/Documentation/Rendering/: MetalRenderer.md
OrchardEngine/OrchardEngine/Documentation/Scripting/: SwiftScripting.md
OrchardEngine/OrchardEngine/Editor/: CMakeLists.txt
OrchardEngine/OrchardEngine/Editor/App/: OrchardEditorApp.swift
OrchardEngine/OrchardEngine/Editor/Panels/: HierarchyPanel.swift  InspectorPanel.swift
OrchardEngine/OrchardEngine/Editor/SceneView/: SceneViewWrapper.swift
OrchardEngine/OrchardEngine/Engine/Audio/: AudioEngine.cpp  AudioEngine.hpp  DSP.cpp  DSP.hpp
OrchardEngine/OrchardEngine/Engine/Core/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  EventSystem.hpp  Memory.cpp  Memory.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
OrchardEngine/OrchardEngine/Engine/ECS/: Archetype.cpp  Archetype.hpp  Component.hpp  Entity.hpp  System.hpp  World.cpp  World.hpp
OrchardEngine/OrchardEngine/Engine/ECS/Components/: TransformComponent.hpp
OrchardEngine/OrchardEngine/Engine/Math/: Matrix.cpp  Matrix.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
OrchardEngine/OrchardEngine/Engine/Physics/: Collider.cpp  Collider.hpp  CollisionDetection.cpp  CollisionDetection.hpp  Constraint.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  Rigidbody.cpp  Rigidbody.hpp
OrchardEngine/OrchardEngine/Engine/Rendering/: Renderer.cpp  Renderer.hpp
OrchardEngine/OrchardEngine/Engine/Rendering/Metal/: MetalContext.hpp  MetalContext.mm
OrchardEngine/OrchardEngine/Engine/Rendering/Metal/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp
OrchardEngine/OrchardEngine/Engine/Rendering/Metal/Shaders/: Common.metal  PBR.metal  PostProcess.metal  Shadow.metal
OrchardEngine/OrchardEngine/Engine/Resources/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp
OrchardEngine/OrchardEngine/Engine/Scripting/CPPRuntime/: SwiftBridge.cpp  SwiftBridge.hpp
OrchardEngine/OrchardEngine/Engine/Scripting/SwiftBindings/: EngineBindings.swift
OrchardEngine/OrchardEngine/Engine/Utils/: UUID.cpp  UUID.hpp
OrchardEngine/OrchardEngine/Samples/FirstPersonDemo/: FirstPersonController.swift
OrchardEngine/OrchardEngine/Samples/PhysicsPlayground/: PhysicsDemo.swift
OrchardEngine/OrchardEngine/Samples/ThirdPersonDemo/: ThirdPersonController.swift
OrchardEngine/OrchardEngine/Tools/AssetPipeline/: AssetImporter.cpp  AssetImporter.hpp
OrchardEngine/OrchardEngine/Tools/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.hpp
OrchardEngine/attached_assets/: Pasted--FULL-ULTRA-DETAILED-PROMPT-Orchard-Engine-Mac-Native-Game-Engine-Metal-Swift-C-You-a-1763341170824_1763341170824.txt
